--- a/index.html
+++ b/index.html
@@ -42,8 +42,54 @@
              <a href="#">Contact</a>
         </div>
       </div>
-        <img src="Images/Hero_Image.png" alt="Picture of Samuel">
-        <img src="Images/Hero_Image.png" alt="Picture of Samuel">
+      <div class="cube1">
+        <img src="Images/cube_bg_1.png">
+      </div>
+      <div class="wannado">
+        <img src="Images/wannado_mockup.png" alt="WannaDO Mockups">
+        <div class="wannado_text">
+        <h3>Mobile Activity Randomizer</h3>
+        <h1> WannaDO </h1>
+        <h4>WannaDO is a native mobile app that randomly suggests activities near you, taking the guessing and stressing out of your next outing.  </h4>
+        </div>
+      </div>
+      <div class="cube2">
+        <img src="Images/cube_bg_2.png">
+      </div>
+      <div class="swallow">
+        <img src="Images/swallow_mockup.png" alt="Swallow Hill Mockups">
+        <div class="swallow_text">
+        <h3>Non-Profit Website Redesign</h3>
+        <h1> Swallow Hill Music </h1>
+        <h4>A visual redesign of Swallow Hill Music's website, as well as a complete overhaul on their ticket purchasing and lesson signup system.   </h4>
+        </div>
+      </div>
+      <div class="cube3">
+        <img src="Images/cube_bg_3.png">
+      </div>
+      <div class="fcc">
+        <img src="Images/fcc_mockup.png" alt="FCC.gov Mockups">
+        <div class="fcc_text">
+        <h3>Government Website Redesign</h3>
+        <h1> FCC.GOV </h1>
+        <h4>A responsive redesign of the Federal Communication Commission's website, including the navigation system and information architecture.    </h4>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer_logo">
+        <img src="Images/Logo.png" alt="Logo">
+        </div>
+        <div class="footer_contact">
+          <h5> Contact</h5>
+          <h6>Sjofalce@gmail.com </h6>
+        </div>
+        <div class="footer_social">
+          <h5> Social</h5>
+          <h6>LinkedIn</h6>
+          <h6>Instagram</h6>
+        </div>
+
+      </div>
 
 
     </body>
