--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
               <img src="Images/Logo_Name.png" alt="SAMUEL LAFALCE">
               <div class="titles"><h2> UX/UI design  | Web Design | Musician</h2>
                 <div class="hero_buttons">
-                  <a class="cta" href="#"><button>ABOUT ME</button></a>
-                  <a class="cta" href="#"><button>MY WORK</button></a>
+                  <a class="cta1" href="#"><button>ABOUT ME</button></a>
+                  <a class="cta2" href="#"><button>MY WORK</button></a>
                 </div>  
               </div> 
           </div>
@@ -30,11 +30,13 @@
         </div>
       </div>
       <div class="nav">
-         <a href="#">About</a>
-         <a href="#">Portfolio</a>
-         <img class="logo" src="Images/Logo.png">
-         <a href="#">Music</a>
-         <a href="#">Contact</a>
+        
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+          <img class="logo" src="Images/Logo.png">
+          <a href="#">Music</a>
+          <a href="#">Contact</a>
+       
        </div>
       <div class="cube1">
         <img src="Images/cube_bg_1.png">
