--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div class="titles"><h2> UX/UI design  | Web Design | Musician</h2>
                 <div class="hero_buttons">
                   <a class="cta1" href="#"><button>ABOUT ME</button></a>
-                  <a class="cta2" href="#"><button>MY WORK</button></a>
+                  <a class="cta2" href="#"><button class="work_button"> MY WORK</button></a>
                 </div>  
               </div> 
           </div>
