--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <img src="Images/Logo_Name.png" alt="SAMUEL LAFALCE">
               <div class="titles"><h2> UX/UI design  | Web Design | Musician</h2>
                 <div class="hero_buttons">
-                  <a class="cta1" href="#"><button>ABOUT ME</button></a>
+                  <a class="cta1" href="#"><button class="about">ABOUT ME</button></a>
                   <a class="cta2" href="#"><button class="work_button"> MY WORK</button></a>
                 </div>  
               </div> 
