--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="nav">
          <a href="#">About</a>
-         <a href="#">Portfolio</a>
+         <a href="https://samjfalce.github.io/portfolio_work/">Portfolio</a>
          <img class="logo" src="Images/Logo.png">
          <a href="#">Music</a>
          <a href="#">Contact</a>
@@ -64,17 +64,16 @@
       
     </section>
       <div class="footer">
-        <div class="footer_logo">
-        <img src="Images/Logo.png" alt="Logo">
-        </div>
+      
         <div class="footer_contact">
-          <h5> Contact</h5>
-          <h6>Sjofalce@gmail.com </h6>
+          <img src="Images/Logo.png" alt="Logo">
+          <h5 class="contact"> Contact</h5>
+          <h6 class="email"> Sjofalce@gmail.com </h6>
         </div>
         <div class="footer_social">
-          <h5> Social</h5>
-          <h6>LinkedIn</h6>
-          <h6>Instagram</h6>
+          <h5 class="social"> Social</h5>
+          <h6 class="link"> LinkedIn</h6>
+          <h6 class="insta">Instagram</h6>
         </div>
 
       </div>
