--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
               <img src="Images/Logo_Name.png" alt="SAMUEL LAFALCE">
               <div class="titles"><h2> UX/UI design  | Web Design | Musician</h2>
                 <div class="hero_buttons">
-                  <a class="cta1" href="#work"><button class="about_button">My Work</button></a>
-                  <a class="cta2" href="#work"><button class="work_button"> About me</button></a>
+                  <a class="cta1" href="#work"><button class="work_button"> My Work</button></a>
+                  <a class="cta2" href="#about"><button class="about_button">About Me</button></a>
+                  
                 </div>  
               </div> 
           </div>
